SubVersion: $Id$

Run './configure --enable-static=yes --enable-shared=no' for use with 
ValGrind. Run 'valgrind --tool=memcheck --leak-check=yes ./test'

To do:
- add check for 8x/9x compat (allow sending of .9kx on a V200 altough it's not a .v2k for instance)

Log:

- 02/02/2006, version 0.0.6: roms
	- replaced fopen calls by g_fopen calls: the library uses GLib encoding on
	filenames for now (UTF-8 on Windows, locale on Linux (usually UTF-8, too)).
	- optimized tifiles_file_is_ti()
	- fixed tifiles_file_get_type for TiGroup support

- 22/01/2006, version 0.0.5: roms
	- removed 'tifiles_create_table_of_entries' from export
	- pass CalcModel to 'tifiles_content_create_xxxx' => increased so major number

	- added functions for adding/removing entr(y)ies in regular file
		=> the last two changes have been done to avoid/minimize manipulation of
			internal fields in FileContent structure (make them opaque/private)
	- added full TiGroup (*.tig) support: read, write, list
	- removed a limitation in 'tifiles_group_contents': the src content is now
		fully copied (not limited to first element like single file)
	- reverted back the changes made on 'fopen' and 'UTF-8'

- 14/01/2006, version 0.0.4: roms
	- replaced assertion checks by warnings in the typesXX.c modules.
	- support UTF-8 filenames
	- added tifiles_file_is_tig function
	- the content->comment field is now initialized in tifiles_content_create_xxx

- 15/09/2005, version 0.0.3: roms
	- fixed reading of TIB files.

- 14/09/2005, version 0.0.2: roms
	- file checksums
	- buffer overflow in tixx_translate functions
	- fixed build of docs/ (Tijl)
	- export missing macros.h

- 04/06/2005, version 0.0.1: roms
	- added transcode function to API for future implementation
	- removed 'name' field of VarEntry: make confusion
	- changed 'var_name' into name and 'fld_name' into 'folder'
	- added checksum verification

- 14/05/2005, version 0.0.1: roms
	- merged some types into a single type
	- common file handling API
